# content_platform

./: .env_sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
content/: admin.py  apps.py  forms.py  models.py  service.py  services.py  tests.py  urls.py  views.py
content/migrations/: 0001_initial.py  0002_alter_publication_owner.py  0003_alter_publication_owner.py  0004_publication_views_count.py  0005_likes.py  0006_dislikes.py  0007_publication_is_paid.py
content/templates/content/: base.html  home_page.html  publication_confirm_delete.html  publication_detail.html  publication_form.html  publication_list.html  search_results.html
content/templates/content/includes/: include_hidden_post_card.html  include_post_card.html
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_user_avatar_user_birthday_and_more.py  0003_user_subscriptions.py  0004_alter_user_username.py  0005_alter_user_username.py  0006_alter_user_username.py
users/templates/users/: login.html  payment_info.html  register.html  subscriptions.html  subscriptions_posts.html  unsubscribe_info.html  user_detail.html
