[tool.poetry]
name = "content-platform"
version = "0.1.0"
description = ""
authors = ["StepanShurmin <shurmin.sa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"
pillow = "^10.2.0"
psycopg2-binary = "^2.9.9"
requests = "^2.31.0"
stripe = "^8.4.0"
python-dotenv = "^1.0.1"
black = {extras = ["d"], version = "^24.2.0"}
coverage = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
